--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^14.0.3",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
@@ -18,12 +19,15 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@popperjs/core": "^2.11.5",
+    "@syncfusion/ej2-angular-buttons": "^20.1.61",
+    "@syncfusion/ej2-angular-notifications": "^20.1.61",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "jw-angular-pagination": "^1.2.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-order-pipe": "^2.2.0",
     "ngx-pagination": "^6.0.1",
+    "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
