--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@popperjs/core": "^2.11.5",
     "@syncfusion/ej2-angular-buttons": "^20.1.61",
     "@syncfusion/ej2-angular-notifications": "^20.1.61",
+    "angular-popper": "^2.0.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "jw-angular-pagination": "^1.2.0",
@@ -28,6 +29,7 @@
     "ngx-order-pipe": "^2.2.0",
     "ngx-pagination": "^6.0.1",
     "ngx-toastr": "^15.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
